src/test/resources/frontendReference/invalid/syntaxErr/basic/unescapedChar.waccast
-- Compiling...
Errors detected during compilation! Exit code 100 returned.
Syntactic Error at 12:12 -- token recognition error at: '"'
Syntactic Error at 12:13 -- missing CHARACTER at '''
1 parser error(s) detected, no further compilation attempted.
